assets/css/about.css
body,
html {
    margin: 0;
    padding: 0;
    width: 100%;
    height: 100%;
}


/*Navigation Bar CSS*/

#navi {
    display: grid;
    grid-template-columns: 40px auto auto auto auto auto auto;
    padding-right: 50px;
    padding-left: 50px;
    position: fixed;
    background-color: transparent;
    width: 100%;
    top: 0;
}

div#navi img {
    width: 50px;
    height: 80px;
}

div#navi p {
    margin: 0;
}

.naviTitles {
    grid-column: 2 / 4;
}

.naviTitle1 {
    font-family: 'Great Vibes', cursive;
    color: #ffffff;
    font-size: 47px;
    padding-left: 11px;
    padding-top: 16px;
}

.naviTitle2 {
    color: #C5915C;
}

div#navi a {
    margin: auto;
    text-decoration: none;
    font-family: "Great Vibes", cursive;
    font-size: 2em;
    color: #ffffff;
}


/*SideBar navigation*/

.fas {
    font-size: 40px;
    position: fixed;
    left: 10px;
    top: 2px;
    color: ghostwhite;
    cursor: pointer;
    display: none;
}

.sidenav {
    visibility: hidden;
    height: 100%;
    width: 0;
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;
    background: #400056;
    overflow-x: hidden;
    padding-top: 60px;
    -webkit-transition: 0.5s;
    transition: 0.5s;
}

.sidenav a {
    padding: 8px 8px 8px 32px;
    text-decoration: none;
    font-size: 35px;
    color: #ffffff;
    display: block;
    -webkit-transition: 0.3s;
    transition: 0.3s;
}

.sidenav .closebtn {
    position: absolute;
    top: 0;
    right: 25px;
    font-size: 36px;
    margin-left: 50px;
    cursor: pointer;
}

.sideBarLinks {
    font-family: "Great Vibes", sans-serif;
}

@media only screen and (min-width:375px) {
    .sidenav {
        visibility: visible;
    }
}

@media only screen and (min-width:375px) {
    #navi {
        display: grid;
        grid-template-columns: auto;
    }
    #logo {
        display: none;
    }
    .naviTitles {
        grid-column: auto;
        text-align: -webkit-center;
        padding-left: 0;
    }
    .naviTitle1 {
        font-size: 35px;
    }
    .fa-bars {
        display: block !important;
        z-index: 3;
        visibility: visible;
        top: 20px;
    }
    div#navi a {
        display: none;
    }
}

@media only screen and (min-width:768px) {}

#header {
    background-color: #400156;
    height: 9%;
    width: 100%;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.header1 {
    text-align: center;
    padding-top: 20px;
}

.headTitle2 {
    font-family: 'Playfair Display', serif;
    text-align: center;
    font-size: 50px;
    color: #c5915c;
}

.bigGrid {
    display: grid;
    grid-template-columns: auto;
    grid-template-rows: auto auto;
    grid-row-gap: 100px;
    justify-content: center;
    align-items: center;
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
    padding-top: 100px;
    padding-bottom: 100px;
}

.title {
    font-family: "Lato", sans-serif;
    text-align: center;
    color: #C5915C;
}

.para {
    font-family: "Playfair Display", serif;
    text-align: center;

}

.specialList {
    text-align: -webkit-center;
    list-style: none;
    font-family: "Playfair Display", sans-serif;
    padding-left: 0;
}


/*Meet us info and pics for smaller screens*/

.smallMeetUs {
    display: none;
}

@media only screen and (min-width:375px) {
    .mainContainer {
        background-color: beige;
        background: url("../images/purpwhite.jpg");
        background-position: center;
        background-size: cover;
    }
    .smallMeetUs {
        display: block;
    }
    #theGirls {
        text-align: -webkit-center;
    }
    .girls {
        font-family: "Parisienne", cursive;
        font-size: 90px;
        color: #B47EB3;
        text-align: center;
        position: relative;
        top: 40px;
    }
    #pics {
        width: 90%
    }
    .meetUs {
        display: none !important;
    }
    .girlsTitle1 {
        color: #ffffff;
        font-family: "Great Vibes", sans-serif;
        font-size: 50px;
        margin-top: 10px;
    }
    .girlsTitle2 {
        color: black;
        font-family: "Great Vibes", sans-serif;
        font-size: 50px;
        margin-top: 10px;
    }
    .bios1 {
        font-family: "Lato", sans-serif;
        width: 90%;
        margin-top: 10px;
        color: white;
    }
    .bios2 {
        font-family: "Lato", sans-serif;
        width: 90%;
        margin-top: 10px;
        color: black;
    }
}


/*Meet us info and pictures*/

.meetUs {
    display: grid;
    grid-template-columns: auto auto;
    grid-template-rows: auto;
    justify-content: center;
    /* max-width: 1200px; */
    margin-left: auto;
    margin-right: auto;
    background: url("../images/IMG_6625.jpg");
    background-position: top;
    background-size: cover;
    height: 100%;
}

.meetDiv {
    grid-column: 1 / 3;
}

.infoGrid {
    display: grid;
    grid-template-columns: 15% 70% 15%;
    align-items: center;
}

.aboutInfoDiv1 {
    text-align: center;
}

.aboutInfoDiv2 {
    text-align: center;
}

.jobTitle {
    font-family: "Great Vibes", cursive;
    text-align: center;
    font-size: 50px;
    color: #ffffff;
}

.aboutBox2 {
    height: 815px;
}

.aboutWords {
    font-family: "Playfair Display", serif;
    text-align: center;
    color: #ffffff;
    font-size: 18px;
}

.melName {
    font-family: "Parisienne", cursive;
    position: relative;
    left: 20px;
    font-size: 90px;
    color: #B47EB3;
    top: -50px;
}

.daniName {
    font-family: "Parisienne", cursive;
    position: relative;
    left: -140px;
    font-size: 90px;
    color: #B47EB3;
    top: -50px;
}

.aboutImg {
    width: 100%;
}

@media only screen and (min-width:375px) {}

.grid-container10 {
    display: -ms-grid;
    display: grid;
    -ms-grid-columns: auto auto auto;
    grid-template-columns: 223px 223px 223px;
    -ms-flex-pack: distribute;
    justify-content: space-around;
    background-color: #400F3C;
    color: #ffffff;
    height: 200px;
}

.grid-item26 {
    grid-column: 1 / 5;
}

.grid-item20 {
    display: grid;
    grid-template-rows: auto 10% 30%;
    text-align: center;
}

.logo {
    width: 70px;
    height: 100px;
    margin: auto;
}

.legalText {
    margin-bottom: 0px;
}

.grid-item22 {
    margin: auto;
    text-align: center;
}

.legal {
    font-family: "Lato", sans-serif;
    font-weight: bold;
}

.footertitle {
    font-family: "Lato", sans-serif;
    font-weight: bold;
    font-size: 2em;
}

.grid-item21 {
    margin: auto;
}

.grid-container11 {
    display: grid;
    grid-template-columns: auto auto auto auto;
}

.grid-container11 div {
    font-family: "Lato", sans-serif;
    font-size: 1em;
    margin: auto;
}

.grid-container11 a {
    text-decoration: none;
    color: #ffffff;
    font-size: 25px;
}

.socialImgs {
    width: 30px;
    height: 30px;
}

#legalLinks {
    text-decoration: none;
}

#legalLinks>p {
    color: #ffffff;
}

.copyright {
    text-align: center;
    grid-column: 1 / 4;
}

@media only screen and (min-width:375px) {
    .grid-container10 {
        grid-template-columns: auto;
    }
    .copyright {
        grid-column: 1;
    }
    .grid-item20 {
        display: none;
    }
    .grid-item22 {
        display: none;
    }
}

@media only screen and (min-width:1024px) {
    #header {
        height: 11%;
    }
    #navi {
        display: grid;
        grid-template-columns: 40px auto auto auto auto auto auto auto;
    }
    #logo {
        display: block;
    }
    .naviTitles {
        grid-column: 2 / 4;
        padding-left: 0;
        margin: auto;
        margin-left: 10px;
    }
    .naviTitle1 {
        font-size: 35px;
    }
    .fa-bars {
        display: none;
        z-index: 0;
        visibility: hidden;
    }
    div#navi a {
        display: block;
        text-align: right;
        margin-right: 0px;
    }
    .smallMeetUs {
        display: none !important;
    }
    .meetUs {
        display: block !important;
        background-size: cover;
    }
    .melName {
        top: 0px;
        left: 10px;
        text-align: center;
    }
    .daniName {
        top: 0px;
        left: -110px;
        text-align: center;
    }
    .infoGrid {
        grid-template-columns: 20% 60% 20%;
        height: -webkit-fill-available;
    }
    .jobTitle {
        font-size: 40px
    }
    .mainContainer {
        background: #ffffff;
    }
    .grid-container10 {
        grid-template-columns: auto auto auto;
    }
    .grid-item20 {
        display: grid;
    }
    .grid-item22 {
        display: grid;
    }
    .copyright {
        grid-column: 1 / 4;
    }
}

@media only screen and (min-width:1440px) {
    .daniName {
        left: 0px;
    }
    .meetUs {
        height: 1000px;
    }
    .infoGrid {
        padding-top: 150px;
    }
    #header {
        height: 11%;
    }
    .grid-item20 {
        display: grid;
    }
}

